fixed weird spacing at bottom of footer

--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -180,7 +180,6 @@ p {
         .nav-section {
             text-align: center;
             width: 14%;
-            margin-bottom: 2%;
         }
         .footer-social-links {
             padding: 1rem 2rem;
